snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210922.132251-3.jar.sha512
81a60a288142516135415c46a1319a5c474788183b777587f5bd8d3be39121e7d454385ea0aaccbc908e4ac822520b5fe04b498e0ce558791d4550c64cc4d4e1